# FVD

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_windows.yaml
cmake/: FindFFmpeg.cmake  FindOpenSSL.cmake  FindPython.cmake  FindZlib.cmake  VersionConf.cmake  additionalOptions.cmake  doxygenHelper.cmake  integrate-qt.cmake  testing.cmake
resources/: fvdownloader.desktop.in  qml2.qrc  resources.qrc  style.css  winres.rc.in
resources/images/: downloader.icns
resources/images/preferences/: style.css
resources/qml2/: LibraryItemDelegate.qml  LibraryView.qml
resources/qml2/components/: BusyIndicator.qml  Button.qml  FramedImage.qml  LabelWithTooltip.qml  TextLine.qml  Tooltip.qml
resources/strategies/: Dailymotion.js  Dailymotion.py  Metacafe.js  Vimeo.js  Vimeo.py  YT-DLP.py  YouTube.js  YouTube.py
src/: CMakeLists.txt
src/common/download/: CMakeLists.txt  downloader.h
src/common/download/detail/: downloader_signal_catchers.cpp
src/common/modules-tests/script/: script.js  script.lua  test-script.cpp  test-script.h  wrongsyntax.js  wrongsyntax.lua
src/common/modules-tests/utilities/: test-AuthenticationHelper.cpp  test-Crc32.cpp  test-Crc32.h  test-Credential.cpp  test-Credential.h  test-DefaultCrypter.cpp  test-DefaultCrypter.h  test-Translation.cpp  test-associations.cpp  test-associations.h
src/common/player/: CMakeLists.txt  audioparsethread.cpp  audioparsethread.h  displaythread.cpp  displaythread.h  ffmpegdecoder.cpp  ffmpegdecoder.h  fpicture.h  fqueue.h  interlockedadd.h  opengldisplay.cpp  opengldisplay.h  parsethread.cpp  parsethread.h  performancecheck.cpp  performancecheck.h  threadcontrol.cpp  threadcontrol.h  timelimiterthread.cpp  timelimiterthread.h  videodisplay.cpp  videodisplay.h  videoframe.h  videoparsethread.cpp  videoparsethread.h  videoplayer.cpp  videoplayer.h  vqueue.h  widgetdisplay.cpp  widgetdisplay.h
src/common/scriptengine/: CMakeLists.txt  jsengine.cpp  jsengine.h  luaengine.cpp  luaengine.h  pythonengine.cpp  pythonengine.h  scriptengine.h  scriptextension.cpp  scriptextension.h
src/common/traffic_limitation/: CMakeLists.txt  InterceptTimer.cpp  QConnectionObjectEx.h  TrafficControl.cpp
src/common/ui_utils/: CMakeLists.txt  tabbeddialogcombo.cpp  taskbar.cpp  taskbar.h  uiutils.cpp  uiutils.h
src/common/utilities/: CMakeLists.txt  authentication_helper.cpp  authentication_helper.h  credential.h  credsretriever.h  customutf8codec.cpp  customutf8codec.h  errorcode.h  event_timer.cpp  event_timer.h  filesaveguard.h  filesystem_utils.cpp  filesystem_utils.h  instantiator.h  iparentadvice.h  logger.cpp  logger.h  loggertag.cpp  loggertag.h  modeldeserializer.cpp  modelserializer.cpp  notify_helper.h  qttranslation.h  singleton.h  translatable.cpp  translation.cpp  utils.cpp  utils.h  windowsfirewall.cpp
src/gui/: barberpoleprogress.cpp  barberpoleprogress.h  clickablelabel.cpp  clickablelabel.h  customdockwidget.cpp  customdockwidget.h  descriptionpanel.cpp  descriptionpanel.h  descriptionpanel.ui  downloadscontrol.cpp  downloadscontrol.h  downloadscontrol.ui  downloadsdelegate.cpp  downloadsdelegate.h  downloadsform.cpp  downloadsform.h  downloadsform.ui  ellipsislabel.cpp  ellipsislabel.h  faenzastyle.cpp  faenzastyle.h  itemsdelegate.cpp  itemsdelegate.h  libraryform.cpp  libraryform.h  libraryform.ui  maintoolbar.cpp  maintoolbar.h  maintoolbar.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mousehoverbutton.cpp  mousehoverbutton.h  playerheader.cpp  playerheader.h  playerheader.ui  preferences.cpp  preferences.h  preferences.ui  (+26 more)
src/gui/qml/: qdeclarativetoplevelitem.cpp  qdeclarativetoplevelitem.h  qdeclarativetoplevelitem_p.h  qrangemodel.cpp  qrangemodel.h  qrangemodel_p.h
src/logic/: basefacademodel.h  configurableproxyfactory.cpp  downloadentity.cpp  downloadentity.h  downloadlistmodel.cpp  downloadlistmodel.h  downloadmanager.cpp  downloadmanager.h  downloadsortfiltermodel.cpp  downloadsortfiltermodel.h  entityfilenames.h  entityholder.cpp  entityholder.h  errors.cpp  errors.h  imagecache.cpp  imagecache.h  libraryaddworker.cpp  libraryaddworker.h  librarymodel.cpp  librarymodel.h  libraryqmllistener.cpp  libraryqmllistener.h  libraryremoveworker.cpp  libraryremoveworker.h  remotevideoentity.cpp  remotevideoentity.h  searchlistmodel.cpp  searchlistmodel.h  searchmanager.cpp  searchmanager.h  strategiescommon.h
src/main/: application.h  global_functions.cpp  global_functions.h  globals.h  main.cpp  settings_declaration.h
src/scripting/: scriptextension.cpp  scriptextension.h  scriptprovider.cpp  scriptprovider.h  scriptstrategy.cpp  scriptstrategy.h
src/tests/: CMakeLists.txt
src/tests/helper/tinyhttpserver/: CMakeLists.txt  main.cpp  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
src/tests/preferences/: CMakeLists.txt  main.cpp  me.qrc  preferences.cpp  preferences.h
src/tests/preferences/images/preferences/: style.css
src/tests/scriptstrategies/: test-scriptstrategies.cpp
src/tests/strategies/: test-strategies.cpp
src/tests/videoplayer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: translations_de.ts  translations_en.ts  translations_es.ts  translations_fr.ts  translations_it.ts  translations_pt.ts  translations_ru.ts  translations_tr.ts
